rafikGameUpadeted